--- a/templates/webassembler.html
+++ b/templates/webassembler.html
@@ -6,8 +6,8 @@
     <title>LALU Assembler</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="webassembler.css" rel="stylesheet" type="text/css">
-    <script src="webassembler.js" type="text/javascript"></script>
+    <link href="../static/stylesheets/webassembler.css" rel="stylesheet" type="text/css">
+    <script src="../static/javascript/webassembler.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="input" class="col-4">
@@ -15,13 +15,15 @@
         <div class="form-group">
             <label for="inputArea">Write LALU Assembly here!</label>
             <br>
-            <textarea class="form-control" id="inputArea" rows="20"></textarea>
+            <textarea class="form-control" id="inputArea" name="inputArea" rows="20">{{inputText}}</textarea>
         </div>
+        <!--
         <div class="form-group">
             <label for="inputFile">Or upload a LALU Assembly file</label>
             <br>
-            <input type="file" class="form-control-file" id="inputFile">
+            <input type="file" class="form-control-file" name="inputFile" id="inputFile">
         </div>
+         -->
         <div>
             <button type="submit" class="btn btn-info" id="assemble">Assemble</button>
             <a class="btn btn-secondary" id="downloadAssembly" href="" download="assembly.txt">Download</a>
@@ -35,7 +37,7 @@
         <div class="form-group">
             <label for="outputArea">Output:</label>
             <br>
-            <textarea class="form-control" id="outputArea" rows="20" readonly></textarea>
+            <textarea class="form-control" id="outputArea" name="outputArea" rows="20" readonly>{{outputText}}</textarea>
         </div>
         <div class="form-group">
             <label for="machineOutputArea">Machine code alone:</label>
