--- a/templates/webassembler.html
+++ b/templates/webassembler.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>LALU Assembler</title>
+    <title>LALU Assembler | LASA Computer Science</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <link href="../static/stylesheets/webassembler.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="https://lasacs.com/wp-content/uploads/2020/08/icon11.png" />
     <script src="../static/javascript/webassembler.js" type="text/javascript"></script>
 </head>
 <body>
