--- a/templates/webassembler.html
+++ b/templates/webassembler.html
@@ -11,12 +11,12 @@
     <script src="../static/javascript/webassembler.js" type="text/javascript"></script>
 </head>
 <body>
-    <div id="input" class="col-4">
+    <div id="input" class="col-6">
     <form action="/" method="POST">
         <div class="form-group">
-            <label for="inputArea">Write LALU Assembly here!</label>
+            <label for="inputArea">LALU Assembly</label>
             <br>
-            <textarea class="form-control" id="inputArea" name="inputArea" rows="27">{{inputText}}</textarea>
+            <textarea class="form-control" id="inputArea" name="inputArea" rows="29">{{inputText}}</textarea>
         </div>
         <!--
         <div class="form-group">
@@ -32,18 +32,16 @@
     </form>
     </div>
 
-    <div class="col-1"></div>
-
-    <div id="output" class="col-4">
+    <div id="output" class="col-6">
         <div class="form-group">
             <label for="outputArea">Original Program</label>
             <br>
             <textarea class="form-control" id="outputArea" name="outputArea" rows="20" readonly>{{outputText}}</textarea>
         </div>
         <div class="form-group">
-            <label for="machineOutputArea">Machine code</label>
+            <label for="machineOutputArea" id="machineCodeLabel">Machine code</label>
             <br>
-            <textarea class="form-control" id="machineOutputArea" rows="5" readonly>{{machineText}}</textarea>
+            <textarea class="form-control" id="machineOutputArea" rows="6" readonly>{{machineText}}</textarea>
         </div>
         <div>
             <button class="btn btn-info" id="copy">Copy</button>
