--- a/static/stylesheets/webassembler.css
+++ b/static/stylesheets/webassembler.css
@@ -15,8 +15,18 @@ body {
 label {
     padding: 10px 0px;
 }
-.btn {
+.btn, .form-switch {
     margin: 20px 20px 0px 20px;
+}
+.form-check-input, .form-check-label {
+    margin: 0;
+    padding: 0;
+}
+.menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 #input {
     text-align: center;
@@ -26,9 +36,9 @@ label {
     text-align: center;
     padding: 0px 20px;
 }
-#inputFile {
-    display: block;
-}
 #machineCodeLabel {
     padding: 24px 0px 10px 0px;
+}
+#auto-copy:checked{
+    background-color: #31d2f2;
 }
