--- a/templates/webassembler.html
+++ b/templates/webassembler.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>LALU Assembler | LASA Computer Science</title>
+
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- JQUERY -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+    <!-- LALU WEB ASSEMBLER -->
     <link href="../static/stylesheets/webassembler.css" rel="stylesheet" type="text/css">
-	<link rel="shortcut icon" href="https://lasacs.com/wp-content/uploads/2020/08/icon11.png" />
+    <link rel="shortcut icon" href="https://lasacs.com/wp-content/uploads/2023/04/lalu.png" />
     <script src="../static/javascript/webassembler.js" type="text/javascript"></script>
+
 </head>
 <body>
     <div id="input" class="col-6">
@@ -36,7 +44,11 @@
             <br>
             <textarea class="form-control" id="machineOutputArea" rows="6" readonly>{{machineText}}</textarea>
         </div>
-        <div>
+        <div class="menu">
+            <div class="form-check form-switch form-check-inline">
+                <input class="form-check-input" type="checkbox" id="auto-copy">
+                <label class="form-check-label" for="auto-copy">Auto Copy</label>
+            </div>
             <button class="btn btn-info" id="copy">Copy</button>
             <a class="btn btn-secondary" id="downloadMachine" href="" download="assembled.txt">Download</a>
         </div>
