--- a/templates/webassembler.html
+++ b/templates/webassembler.html
@@ -24,7 +24,7 @@
         <div class="form-group">
             <label for="inputArea">LALU Assembly</label>
             <br>
-            <textarea class="form-control" id="inputArea" name="inputArea" rows="29">{{inputText}}</textarea>
+            <textarea class="form-control" id="inputArea" name="inputArea" rows="29" onkeydown="staleCode();">{{inputText}}</textarea>
         </div>
         <div>
             <button type="submit" class="btn btn-info" id="assemble">Assemble</button>
